--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1056,6 +1056,7 @@ body {
       position: fixed;
       bottom: 70px;
       right: 50px;
+      display: none;
     }
 
     // Second page ----- about project
@@ -1734,6 +1735,7 @@ body {
                 @include flex-jc-ai(space-between, center);
                 border-bottom: 1px solid $darkBlue;
                 margin-bottom: 16px;
+
                 .term-title {
                   display: flex;
                   align-items: center;
@@ -1741,6 +1743,13 @@ body {
                     font-family: sans-serif;
                     text-transform: uppercase;
                     font-size: 40px;
+                    @media (max-width: 420px) {
+                      font-size: 32px;
+                    }
+
+                    @media (max-width: 360px) {
+                      font-size: 26px;
+                    }
                   }
                 }
                 .social-fb {
