--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4034,12 +4034,16 @@ body footer .container .tablet-responsive .contact-info p a:visited:hover {
     height: 33px;
   }
 }
-@media (max-width: 325px) {
+@media (max-width: 768px) {
+  body main .third {
+    max-width: 650px;
+  }
   body main .third .worked-on-project {
     gap: 1rem !important;
     border-left: 2px solid #eed370;
-    margin-left: 15px;
+    margin-left: 25px;
     padding-left: 10px;
+    max-width: 412px;
   }
   body main .third .worked-on-project h5 {
     font-size: 22px !important;
@@ -4106,9 +4110,9 @@ body .terms-and-condition__section {
   margin: 150px;
 }
 body .terms-and-condition__section--header {
-  font-family: "DejaVuSans";
+  font-family: "BPGVenuri2010";
   font-size: 30px;
-  color: #c0d0de;
+  color: #1d2933;
   margin-bottom: 30px;
   line-height: 35px;
 }
