--- a/scss/_terms_and_condition.scss
+++ b/scss/_terms_and_condition.scss
@@ -29,9 +29,9 @@ body {
     &__section {
       margin: 150px;
       &--header {
-        font-family: $dejavu;
+        font-family: $venuri;
         font-size: 30px;
-        color: $lightGray;
+        color: $darkBlue;
         margin-bottom: 30px;
         line-height: 35px;
       }
