--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -451,6 +451,7 @@ body {
             width: 100%;
             border-bottom: 1px solid $darkBlue;
             padding-bottom: 7px;
+
             .tagandsocial {
               @include flex-jc-ai(flex-end, center);
               .termintag {
@@ -1555,6 +1556,17 @@ body {
                 width: 100%;
                 border-bottom: 1px solid $darkBlue;
                 padding-bottom: 7px;
+
+                & h1 {
+                  margin-right: 20px;
+                  font-family: sans-serif;
+                  font-size: 16px;
+                  color: $darkBlue;
+                  background-color: $tagsyellow;
+                  font-weight: 500;
+                  line-height: 20px;
+                  padding: 6px 20px;
+                }
                 .tagandsocial {
                   @include flex-jc-ai(flex-end, center);
                   .fb-icon {
@@ -1736,6 +1748,23 @@ body {
                 @include flex-jc-ai(space-between, center);
                 border-bottom: 1px solid $darkBlue;
                 margin-bottom: 16px;
+
+                .terms-left {
+                  display: flex;
+                  gap: 20px;
+                  align-items: center;
+
+                  & h1 {
+                    margin-right: 20px;
+                    font-family: sans-serif;
+                    font-size: 16px;
+                    color: $darkBlue;
+                    background-color: $tagsyellow;
+                    font-weight: 500;
+                    line-height: 20px;
+                    padding: 6px 20px;
+                  }
+                }
 
                 .term-title {
                   display: flex;
