--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -27,6 +27,7 @@
     padding-right: 10px;
     display: flex;
     align-items: center;
+
     h2 {
       font-family: $venuri;
       font-size: 28px;
@@ -1050,6 +1051,17 @@ body {
             }
           }
         }
+
+        .image {
+          img {
+            width: 100%;
+
+            @media (max-width: 1500px) {
+              margin-left: 40px;
+              padding-right: 40px;
+            }
+          }
+        }
       }
     }
 
@@ -1112,6 +1124,12 @@ body {
               }
             }
           }
+        }
+      }
+
+      @media (max-width: 1500px) {
+        & img {
+          width: 30%;
         }
       }
     }
@@ -2263,6 +2281,7 @@ body {
         margin: 0 auto;
         .burger-bar {
           display: block;
+
           border: none;
           color: $darkBlue;
         }
@@ -2494,11 +2513,6 @@ body {
                   font-size: 14px;
                 }
               }
-            }
-          }
-          .image {
-            img {
-              width: 300px;
             }
           }
         }
@@ -2866,6 +2880,7 @@ body {
           display: block;
           border: none;
           color: $darkBlue;
+          transform: scale(1.3);
         }
         nav {
           display: none;
@@ -3373,6 +3388,31 @@ body {
             text-decoration: underline;
             line-height: 22px;
             cursor: pointer;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  body {
+    header {
+      .container {
+        .logoStyle {
+          width: 250px;
+
+          .main {
+            width: 100%;
+            padding: 0;
+            h2 {
+              font-size: 17px;
+            }
+            .logo {
+              img {
+                width: 20px;
+              }
+            }
           }
         }
       }
