--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1479,6 +1479,34 @@ body {
       }
     }
 
+    .recovery-password-success {
+      @media (max-width: 768px) {
+        .container {
+          h1 {
+            font-size: 25px;
+            line-height: 29px;
+          }
+
+          img {
+            width: 108px;
+          }
+        }
+      }
+
+      @media (max-width: 320px) {
+        .container {
+          h1 {
+            font-size: 16px;
+            line-height: 18px;
+          }
+
+          img {
+            width: 45px;
+          }
+        }
+      }
+    }
+
     .profile-section {
       padding: 70px 0 200px 0;
 
@@ -1911,6 +1939,31 @@ body {
               line-height: 45px;
               color: $darkBlue;
               margin-bottom: 30px;
+
+              @media (max-width: 768px) {
+                font-size: 25px;
+                line-height: 33px;
+              }
+
+              @media (max-width: 320px) {
+                font-size: 16px;
+                line-height: 21px;
+              }
+            }
+          }
+          @media (max-width: 768px) {
+            div {
+              img {
+                width: 108px;
+              }
+            }
+          }
+
+          @media (max-width: 768px) {
+            div {
+              img {
+                width: 45px;
+              }
             }
           }
         }
