--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2450,6 +2450,11 @@ body main .profile-section .container .right-inner .my-terms .term .title .terms
   line-height: 20px;
   padding: 6px 20px;
 }
+@media (max-width: 460px) {
+  body main .profile-section .container .right-inner .my-terms .term .title .terms-left h1 {
+    padding: 6px 10px;
+  }
+}
 body main .profile-section .container .right-inner .my-terms .term .title .term-title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2463,14 +2468,14 @@ body main .profile-section .container .right-inner .my-terms .term .title .term-
   text-transform: uppercase;
   font-size: 40px;
 }
-@media (max-width: 420px) {
+@media (max-width: 580px) {
   body main .profile-section .container .right-inner .my-terms .term .title .term-title h2 {
-    font-size: 32px;
+    font-size: 22px;
   }
 }
 @media (max-width: 360px) {
   body main .profile-section .container .right-inner .my-terms .term .title .term-title h2 {
-    font-size: 26px;
+    font-size: 18px;
   }
 }
 body main .profile-section .container .right-inner .my-terms .term .title .social-fb {
@@ -2512,6 +2517,11 @@ body main .profile-section .container .right-inner .my-terms .term .definition .
   font-size: 18px;
   font-family: "DejaVuSans";
 }
+@media (max-width: 480px) {
+  body main .profile-section .container .right-inner .my-terms .term .definition .definition-header span {
+    font-size: 16px;
+  }
+}
 body main .profile-section .container .right-inner .my-terms .term .definition .definition-box {
   background: #e9e9ed;
   font-family: "DejaVuSans";
@@ -2532,6 +2542,11 @@ body main .profile-section .container .right-inner .my-terms .term .definition .
 body main .profile-section .container .right-inner .my-terms .term .definition .definition-box .definition-info h2 {
   font-size: 40px;
   margin-bottom: 9px;
+}
+@media (max-width: 580px) {
+  body main .profile-section .container .right-inner .my-terms .term .definition .definition-box .definition-info h2 {
+    font-size: 22px;
+  }
 }
 body main .profile-section .container .right-inner .my-terms .term .definition .definition-box .definition-info span {
   font-size: 18px;
