--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -763,7 +763,7 @@ body {
                 width: 100%;
               }
 
-              img {
+              .show-password {
                 position: absolute;
                 right: 20px;
                 top: 47px;
@@ -840,6 +840,13 @@ body {
                 display: flex;
                 align-items: center;
                 min-width: 370px;
+
+                .error-rules {
+                  max-width: 240px;
+
+                  position: absolute;
+                  transform: translate(0, 30px);
+                }
 
                 @media (max-width: 545px) {
                   min-width: 200px;
@@ -1765,7 +1772,7 @@ body {
             .password-input {
               width: 100%;
               position: relative;
-              img {
+              .show-password {
                 position: absolute;
                 right: 20px;
                 top: 25px;
