Adding media queries for terms and condition

--- a/scss/_terms_and_condition.scss
+++ b/scss/_terms_and_condition.scss
@@ -1,13 +1,17 @@
 body {
   .terms-and-condition {
-    width: 1400px;
+    width: 100%;
     padding-right: 120px;
     margin: 0 auto;
+    @media (max-width: 800px) {
+      padding: 0;
+    }
 
     &__header {
       @include flex-jc-ai(center, center);
       flex-direction: column;
       margin-top: 145px;
+
       &--header {
         font-size: 50px;
         font-family: $venuri;
@@ -23,6 +27,36 @@ body {
         font-size: 18px;
         line-height: 24px;
         font-family: $dejavu;
+      }
+
+      @media (max-width: 800px) {
+        margin-top: 44.5px;
+
+        &--header {
+          font-size: 28px;
+          line-height: 37px;
+        }
+
+        &--paragraph {
+          max-width: 508px;
+          font-size: 15px;
+          line-height: 24px;
+        }
+      }
+
+      @media (max-width: 360px) {
+        margin-top: 40px;
+
+        &--header {
+          font-size: 19px;
+          line-height: 26px;
+        }
+
+        &--paragraph {
+          max-width: 213px;
+          font-size: 10px;
+          line-height: 21px;
+        }
       }
     }
 
@@ -42,6 +76,36 @@ body {
         line-height: 24px;
         color: $black;
         margin-bottom: 20px;
+      }
+
+      @media (max-width: 800px) {
+        margin: 63px;
+
+        &--header {
+          font-size: 25px;
+          line-height: 29px;
+        }
+
+        &--paragraph {
+          max-width: 648px;
+          font-size: 18px;
+          line-height: 21px;
+        }
+      }
+
+      @media (max-width: 360px) {
+        margin: 63px 24px;
+
+        &--header {
+          font-size: 15px;
+          line-height: 18px;
+        }
+
+        &--paragraph {
+          max-width: 272px;
+          font-size: 12px;
+          line-height: 14px;
+        }
       }
     }
   }
