--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1494,12 +1494,14 @@ body {
       }
     }
 
-    .recovery-password-success {
+    .recovery-password-success,
+    .profile-success-message {
       @media (max-width: 768px) {
         .container {
           h1 {
             font-size: 25px;
             line-height: 29px;
+            text-align: center;
           }
 
           img {
@@ -1620,7 +1622,7 @@ body {
                 border-bottom: 1px solid $darkBlue;
                 padding-bottom: 7px;
 
-                & h1 {
+                & a {
                   margin-right: 20px;
                   font-family: sans-serif;
                   font-size: 16px;
@@ -1817,7 +1819,7 @@ body {
                   gap: 20px;
                   align-items: center;
 
-                  & h1 {
+                  & a {
                     margin-right: 20px;
                     font-family: sans-serif;
                     font-size: 16px;
